# job-ingestion

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt  run_migration.py  test_ingestion_with_sample.py  test_salary_approval.py  test_sample_data.json
docs/: QUICKSTART.md
migrations/: 001_expand_job_schema.py  002_add_salary_metadata.py  003_allow_null_external_id.py
scripts/: wait_for_services.sh
tasks/: BACKLOG.md  PRD.md  task_T01_bootstrap_fastapi_app.md  task_T02_project_config_and_tooling.md  task_T03_config_management_pydantic_settings_v1.md  task_T04_basic_api_routing_scaffold.md  task_T05_storage_models_and_db_connection_stubs.md  task_T05_supporting_test_models.md  task_T06_ingestion_service_interfaces_stubs.md  task_T07_schema_detector_stub.md  task_T08_transformation_normalizers_stubs.md  task_T09_approval_engine_skeleton.md  task_T09_supporting_test_engine.md  task_T10_rules_modules_stubs.md  task_T11_api_contract_scaffolding_openapi.md  task_T11_supporting_test_api_docs.md  task_T12_docker_compose_for_local_services.md  task_T13_logging_and_metrics_scaffolding.md  task_T14_ci_friendly_make_targets.md  task_T15_pre_commit_in_ci_and_local.md  task_T16_sample_fixtures_and_test_data.md  task_T17_integration_test_api_health_and_docs.md  task_T18_documentation_contributing_and_quickstart.md  task_T19_version_pin_fastapi_pydantic_v1.md  task_T20_migrate_to_pydantic_v2_follow_up.md  task_T21_ingest_endpoint.md  (+2 more)
(+38 files in other folders)
