[project]
name = "job-ingestion-service"
version = "0.1.0"
description = "Job Ingestion Service MVP"
authors = [{ name = "Job Ingestion Team" }]
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
filterwarnings = [
    # httpx 0.27 deprecates the 'app' shortcut used by Starlette TestClient
    "ignore:The 'app' shortcut is now deprecated.*:DeprecationWarning:httpx.*",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
